istio/Service Mesh资料/脚本文件/脚本文件/day03/productpageIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: productpage-ingress
spec:
  rules:
  - host: productpage.istio.qy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: productpage
          servicePort: 9080
